fix input.search-bar font-size to prevent auto-zoom on iOS

--- a/index.css
+++ b/index.css
@@ -149,6 +149,11 @@ body {
    max-width: 16px;
 }
 
+input.search-bar,
+button.search {
+   font-size: 16px;
+}
+
 input.search-bar {
    border: none;
    line-height: 38px;
